data/derived/sp14/progs/unify/prog0692.ml.out
Characters 95-96:
  | h::t -> listReverse ( append ( t [h] ) );;
                                   ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
